added-scss-files

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,59 +1,2 @@
 @import '~bulma/bulma.sass'; // ! comment out this line if you DO NOT want to use Bulma
-
-.page-top-div{
-display: flex;
-justify-content: center;
-}
-
-.page-bottom-div {
-  display: flex;
-  justify-content: center;
-}
-
-.page-bottom {
-  display: flex;
-  justify-content: center;
-  width: 400px;
-  align-items: center;
-}
-
-.page-top {
-  display: flex;
-  justify-content: center;
-  width: 400px;
-  align-items: center;
-}
-
-button {
-  background-color: rgba(48, 215, 19, 0);
-  font-size: large;
-  width: 60px;
-  font-weight: bold;
-  border: 2px rgba(0, 128, 0, 0) solid;
-  color: rgb(9, 87, 0);
-}
-
-.inc {
-  position: absolute;
-  margin-left: 150px;
-  height: 60px;
-  margin-bottom: 12px;
-  font-size: 40px;
-}
-
-.dec {
-  position: absolute;
-  margin-right: 150px;
-  height: 60px;
-  margin-top: 2px;
-  font-size: 40px;
-  rotate: 180deg;
-}
-
-.page-num {
-font-size: large;
-}
-
-.portalimg {
-height: 70px;
-}
+@import 'characters_list';
