--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,3 @@
 @import '~bulma/bulma.sass'; // ! comment out this line if you DO NOT want to use Bulma
 @import 'characters_list';
+@import 'character_bio'
