--- a/src/styles/_characters_list.scss
+++ b/src/styles/_characters_list.scss
@@ -54,7 +54,7 @@ button {
 
 .inc {
   position: absolute;
-  margin-left: 150px;
+  margin-left: 190px;
   height: 60px;
   margin-bottom: 12px;
   font-size: 40px;
@@ -62,7 +62,7 @@ button {
 
 .dec {
   position: absolute;
-  margin-right: 150px;
+  margin-right: 190px;
   height: 60px;
   margin-top: 2px;
   font-size: 40px;
@@ -74,6 +74,9 @@ font-size: large;
 color: white;
 margin-left: 5px;
 margin-right: 5px; 
+width:85px;
+margin:20px;
+font-weight: bold;
 }
 
 .portalimg {
