--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,6 @@
 @import '~bulma/bulma.sass'; // ! comment out this line if you DO NOT want to use Bulma
 @import 'characters_list';
+@import 'character_bio';
+@import 'home.scss';
+@import '_episodes_list.scss';
+@import '_navbar.scss';
