--- a/src/styles/_characters_list.scss
+++ b/src/styles/_characters_list.scss
@@ -1,5 +1,6 @@
 .section{
   background-color: rgb(24, 73, 53);
+  
 }
 .column {
   display: flex;
@@ -18,6 +19,8 @@
   }
 h4.card-header-title {
   color: white;
+  font-size: 20px;
+  font-family: 'Gloria Hallelujah', cursive;
 }
 .page-top-div{
 display: flex;
