--- a/src/styles/_episodes_list.scss
+++ b/src/styles/_episodes_list.scss
@@ -12,7 +12,7 @@
   color: white;
   flex-wrap: wrap;
   text-align: center;
-  max-height: 325px
+  max-height: 325px;
 }
 .episode-header {
   color: rgba(255, 255, 255, 0.681);
@@ -24,6 +24,7 @@
   margin-top: 5px
 }
 .episode-info {
-  font-size: 16px;
+  font-size: 19px;
   font-weight: 600;
+  font-family: 'Gloria Hallelujah', cursive;
 }
