--- a/src/styles/_characters_list.scss
+++ b/src/styles/_characters_list.scss
@@ -74,9 +74,10 @@ font-size: large;
 color: white;
 margin-left: 5px;
 margin-right: 5px; 
-width:85px;
+width:80px;
 margin:20px;
 font-weight: bold;
+font-family: 'Gloria Hallelujah', cursive;
 }
 
 .portalimg {
